--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "crons": [
       {
         "path": "/api/cron/fetch-contests",
-        "schedule": "0 */24 * * *"
+        "schedule": "* 5 * * *"
       }
     ]
   }
