--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "date-fns": "^3.3.1",
     "geist": "^1.4.2",
     "lucide-react": "^0.344.0",
-    "next": "14.1.1",
+    "next": "^14.2.25",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -37,7 +37,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "^14.2.25",
     "postcss": "^8.5.4",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.17",
