--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "framer-motion": "^12.16.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.344.0",
     "next": "^14.2.25",
