--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.16.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.344.0",
